# rdai-ai-in-prod

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: llm_client.py  main.py  utils.py
backend/app/schemas/: prompt_payload.py
data-feed/: .env.template  config.yaml  main.py  pyproject.toml
data_feed/: .env.template  Dockerfile  main.py  pyproject.toml
datafeed/: .env.template
embedder/: .env.template  Dockerfile  pyproject.toml
embedder/app/: main.py
embedder/app/schemas/: embedder_payload.py
frontend/: Dockerfile  config.yaml  main.py  pyproject.toml  utils.py
frontend/pages/: chatbot.py  prompt_creator.py  rag_chatbot.py
frontend/prompts/: base_instruct.json  example_opt.json
model-server/: Dockerfile
model-server/model_repository/facebook-opt125m/1/: model.json
