[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rdai-ai-in-prod-frontend"
version = "1.0.0"
description = "Frontend for Red Dragon's AI In Production Course Project using Gradio."
authors = [
    {name = "Ng Jian Ming", email = "ngjianming93@gmail.com"}
]
maintainers = [
    {name = "Ng Jian Ming", email = "ngjianming93@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = { file = "License" }
dynamic = ["version"]

[tool.poetry]
name = "rdai-ai-in-prod-frontend"
version = "1.0.0"
description = "Frontend for Red Dragon's AI In Production Course Project using Gradio."
authors = [
    "Ng Jian Ming"
]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.16.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.15"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.15"
mypy = "^1.8.0"

[tool.ruff]
target-version = "py310"